--- a/index.html
+++ b/index.html
@@ -130,6 +130,23 @@ footer {
     <h1>Unblocked-X - Unblocked Games</h1>
 	<p>Unblocked-X is a game library, filled with unblocked games for public/school networks, with a great moderation and developper team. Unblocked-x is made for people  whose networks block games websites. These games include popular titles like "Friday Night Funkin". To play these games, you simply have to watch a 5 second adfoc.us ad, and you can play the game after that. All of the games in this library are safe, as they are sourced from itch.io, a popular games website. More games will be added progressively. Enjoy the free games!</p>
 	<p>- The Dev Team</p>
+		
+		
+		 <script type="text/javascript">
+amzn_assoc_placement = "adunit0";
+amzn_assoc_tracking_id = "unblockedx1-20";
+amzn_assoc_ad_mode = "manual";
+amzn_assoc_ad_type = "smart";
+amzn_assoc_marketplace = "amazon";
+amzn_assoc_region = "US";
+amzn_assoc_linkid = "0a4e3cf5e47a6732e3d68875f44caccc";
+amzn_assoc_asins = "B09G53P844,B07F3RFPXG,B00SAYCVTQ,B00J4W918M,B097B1ZJ5T,B00AR03O8I,B07TGNFVWV,B07TFP7JFH,B09BDWJ4YJ,B09JCQCGXT";
+amzn_assoc_title = "Recommended Content";
+amzn_assoc_design = "in_content";
+</script>
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+		
+		
 
 	<a class="btn btn-primary" href="services.html" role="Visit Unblocked-X">Visit Unblocked-X</a>
 	<a class="btn btn-primary" href="chat.html" role="Chat with users">Chat with users</a>
