--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ footer {
 	<p>- The Dev Team</p>
 		
 		
-		 <script type="text/javascript">
+ <script data-cfasync="false" type="text/javascript">
 amzn_assoc_placement = "adunit0";
 amzn_assoc_tracking_id = "unblockedx1-20";
 amzn_assoc_ad_mode = "manual";
@@ -144,7 +144,7 @@ amzn_assoc_asins = "B09G53P844,B07F3RFPXG,B00SAYCVTQ,B00J4W918M,B097B1ZJ5T,B00AR
 amzn_assoc_title = "Recommended Content";
 amzn_assoc_design = "in_content";
 </script>
-<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+<script data-cfasync="false" src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 		
 		
 
