--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+  <title>Unblocked-X</title>
+<link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
   <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <!--<script type='text/javascript' src='http://0.0.0.0:8080/scaledrone.js'></script>-->
   <meta charset="utf-8">
