--- a/index.html
+++ b/index.html
@@ -377,6 +377,8 @@ amzn_assoc_design = "in_content";
   </article>
   
 </section>
+	
+	<div id="amzn-assoc-ad-d71c8812-1c48-473d-a398-72f41ad54d4f"></div><script async data-cfasync="false" src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=d71c8812-1c48-473d-a398-72f41ad54d4f"></script>
 
 <footer>
   <p>© Unblocked-X, 2022 - All rights reserved</p>
