--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -70,7 +70,19 @@
   </form>
 
     
-  <div id="amzn-assoc-ad-d71c8812-1c48-473d-a398-72f41ad54d4f"></div><script async data-cfasync="false" src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=d71c8812-1c48-473d-a398-72f41ad54d4f"></script>
+   <script data-cfasync="false" type="text/javascript">
+amzn_assoc_placement = "adunit0";
+amzn_assoc_tracking_id = "unblockedx1-20";
+amzn_assoc_ad_mode = "manual";
+amzn_assoc_ad_type = "smart";
+amzn_assoc_marketplace = "amazon";
+amzn_assoc_region = "US";
+amzn_assoc_linkid = "0a4e3cf5e47a6732e3d68875f44caccc";
+amzn_assoc_asins = "B09G53P844,B07F3RFPXG,B00SAYCVTQ,B00J4W918M,B097B1ZJ5T,B00AR03O8I,B07TGNFVWV,B07TFP7JFH,B09BDWJ4YJ,B09JCQCGXT";
+amzn_assoc_title = "Recommended Content";
+amzn_assoc_design = "in_content";
+</script>
+<script data-cfasync="false" src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 
   
   <script src="./script.js"></script>
