--- a/Sites/chatupdate/index.html
+++ b/Sites/chatupdate/index.html
@@ -86,14 +86,12 @@
 </head>
 <body>
   <div class="left">
-    <div class="label">Your name</div>
-    <div class="me"></div>
     <div class="label">Public rooms</div>
     <div class="rooms">
       <div class="room">Global public room</div>
     </div>
     <div class="label">Connected users</div>
-    <div class="members-list"></div>
+    <div class="members-list">-</div>
   </div>
   <div class="right">
     <div class="chat-title">Global public room</div>
