--- a/Sites/chatupdate/index.html
+++ b/Sites/chatupdate/index.html
@@ -91,7 +91,8 @@
       <div class="room">Global public room</div>
     </div>
     <div class="label">Connected users</div>
-    <div class="members-list">-</div>
+    <div class="members-count">-</div>
+  <div class="members-list">-</div>
   </div>
   <div class="right">
     <div class="chat-title">Global public room</div>
