--- a/Sites/chatupdate/index.html
+++ b/Sites/chatupdate/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<title>Anonymous Chat</title>
+<link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
+
   <script src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
