--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Unblocked-X</title>
+
+<title>Anonymous Chat</title>
 <link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
-  <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
-  <!--<script type='text/javascript' src='http://0.0.0.0:8080/scaledrone.js'></script>-->
+
+  <script src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <style>
     body {
       box-sizing: border-box;
       margin: 0;
-      padding: 13px;
       display: flex;
-      flex-direction: column;
-      max-height: 100vh;
+      flex-direction: row;
+      height: 100vh;
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     }
 
-    .members-count,
+    .left {
+      display: flex;
+      flex-direction: column;
+      background: #f9f9f9;
+      padding: 10px;
+    }
+
+    .right {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+    }
+
+    .me,
     .members-list,
-    .messages {
-      border: 1px solid #e4e4e4;
-      padding: 15px;
-      margin-bottom: 15px;
+    .messages,
+    .rooms {
+      padding: 10px 0;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .label {
+      text-transform: uppercase;
+      font-size: 12px;
+      color: gray;
     }
 
     .messages {
       flex-shrink: 1;
+      flex-grow: 1;
       overflow: auto;
     }
 
@@ -38,14 +59,23 @@
       display: inline-block;
     }
 
-    .member {
+    .member,
+    .room {
       padding-right: 10px;
       position: relative;
+      cursor: pointer;
+    }
+    .member:hover,
+    .room:hover {
+      text-decoration: underline;
     }
 
-    .message-form {
+    .message-form,
+    .chat-title {
       display: flex;
       flex-shrink: 0;
+      background: #e0e0e0;
+      padding: 10px;
     }
     .message-form__input {
       flex-grow: 1;
@@ -54,38 +84,28 @@
       font-size: 16px;
     }
     .message-form__button {
-      margin: 10px;
+      margin: 10px 0 10px 10px;
     }
   </style>
 </head>
 <body>
-  <h1>Unblocked-X Anonymous Chat Room</h1>
-  
-  <div class="members-count">-</div>
+  <div class="left">
+    <div class="label">Public rooms</div>
+    <div class="rooms">
+      <div class="room">Global public room</div>
+    </div>
+    <div class="label">Connected users</div>
+    <div class="members-count">-</div>
   <div class="members-list">-</div>
-  <div class="messages"></div>
-  <form class="message-form" onsubmit="return false;">
-    <input class="message-form__input" placeholder="Type a message.." type="text"/>
-    <input class="message-form__button" value="Send" type="submit"/>
-  </form>
-
-    
-   <script data-cfasync="false" type="text/javascript">
-amzn_assoc_placement = "adunit0";
-amzn_assoc_tracking_id = "unblockedx1-20";
-amzn_assoc_ad_mode = "manual";
-amzn_assoc_ad_type = "smart";
-amzn_assoc_marketplace = "amazon";
-amzn_assoc_region = "US";
-amzn_assoc_linkid = "0a4e3cf5e47a6732e3d68875f44caccc";
-amzn_assoc_asins = "B09G53P844,B07F3RFPXG,B00SAYCVTQ,B00J4W918M,B097B1ZJ5T,B00AR03O8I,B07TGNFVWV,B07TFP7JFH,B09BDWJ4YJ,B09JCQCGXT";
-amzn_assoc_title = "Recommended Content";
-amzn_assoc_design = "in_content";
-</script>
-<script data-cfasync="false" src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
-
-  
+  </div>
+  <div class="right">
+    <div class="chat-title">Global public room</div>
+    <div class="messages"></div>
+    <form class="message-form" onsubmit="return false;">
+      <input class="message-form__input" placeholder="Type a message.." type="text"/>
+      <input class="message-form__button" value="Send" type="submit"/>
+    </form>
+  </div>
   <script src="./script.js"></script>
-  
 </body>
 </html>
