--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+<script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(383595, {whitelist: [], blacklist: ["unblocked-x.com"]});</script>
+
 <!-- Hotjar Tracking Code for https://unblocked-x.com -->
 <script>
     (function(h,o,t,j,a,r){
