--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Friday Night Funkin</h5>
     <p class="card-text">Play Friday Night Funkin Now</p>
-    <a href="http://adfoc.us/69347880924028" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/2876359-359162/index.html" class="btn btn-primary">Play Now</a>
   </div>
 </div>
 
@@ -176,7 +176,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">The Backrooms</h5>
     <p class="card-text">Play The Backrooms Now</p>
-    <a href="http://adfoc.us/69347880924017" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5227008/Backrooms%20v1.6%20-%20WebGL/index.html" class="btn btn-primary">Play Now</a>
   </div>
 </div>
 
