--- a/index.html
+++ b/index.html
@@ -364,6 +364,36 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
+<div class="card" style="width: 18rem;display:inline-block;">
+  <img src="./Assets/sleep.gif" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Sleepy Boi Can't Sleep</h5>
+    <p class="card-text">Play SBCS Now</p>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/4924354/_wvy__clr__sleepi_boi_can_t_sleep_final/index.html" class="btn btn-primary">Play Now</a>
+  </div>
+</div>
+
+<div class="card" style="width: 18rem;display:inline-block;">
+  <img src="./Assets/wordl.gif" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">WordRL</h5>
+    <p class="card-text">Play WordRL Now</p>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5409129/webgl/index.html" class="btn btn-primary">Play Now</a>
+  </div>
+</div>
+
+
+<div class="card" style="width: 18rem;display:inline-block;">
+  <img src="./Assets/gift.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Gift Blox</h5>
+    <p class="card-text">Play Gift Blox Now</p>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5006173/index.html" class="btn btn-primary">Play Now</a>
+  </div>
+</div>
+
+
+
 
 
   </article>
