--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -1,1 +1,190 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+<!-- <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(383595, {whitelist: [], blacklist: ["unblocked-x.com"]});</script> -->
+
+<!-- Hotjar Tracking Code for https://unblocked-x.com -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2713784,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
+<!-- Google Analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'G-TCTV2ZYS69', 'auto');
+ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<title>Pablo Leakz</title>
+<link rel="shortcut icon" type="image/png" href="./Assets/image.png"/>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+<nav class="navbar navbar-default"> </nav>
+	
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+	
+header3 {
+  background-color: #33393E;
+  color: white;
+}
+
+
+	
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  width: 100%;
+  background-color: #f1f1f1;
+  /* height: 900px;  only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
+</style>
+</head>
+<body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+  <div class="container">
+    <a class="navbar-brand" href="../index.html">
+      <img src="./Assets/image.png" class="rounded" height="80">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      
+	        <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="./sites/contactus.html">Contact Us</a>
+        </li>
+      </ul>
+
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="./sites/chat.html">Chat</a>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+</nav>
+<!-- Page Content -->
+
+<section class="rounded">
+	<article>
+    <h1>Pablo Leakz</h1>
+	<p>Leaked school documents to help with studying.</p>
+		
+
+		
+		
+
+	<a class="btn btn-primary" href="chat.html" role="Chat with users">Chat with users</a>
+	<a class="btn btn-primary" href="https://gofund.me/7824360e" role="Donate">Donate</a>
+        <p>&nbsp;</p>
+				
+ <script data-cfasync="false" type="text/javascript">
+amzn_assoc_placement = "adunit0";
+amzn_assoc_tracking_id = "unblockedx1-20";
+amzn_assoc_ad_mode = "manual";
+amzn_assoc_ad_type = "smart";
+amzn_assoc_marketplace = "amazon";
+amzn_assoc_region = "US";
+amzn_assoc_linkid = "0a4e3cf5e47a6732e3d68875f44caccc";
+amzn_assoc_asins = "B09G53P844,B07F3RFPXG,B00SAYCVTQ,B00J4W918M,B097B1ZJ5T,B00AR03O8I,B07TGNFVWV,B07TFP7JFH,B09BDWJ4YJ,B09JCQCGXT";
+amzn_assoc_title = "Recommended Content";
+amzn_assoc_design = "in_content";
+</script>
+<script data-cfasync="false" src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+<p>&nbsp;</p>
+<h1><span style="text-decoration: underline;">Leaked Documents</span></h1>
+<p>&nbsp;</p>
+
+
+<div class="card" style="width: 18rem;display:inline-block;">
+  <img src="https://i.pinimg.com/originals/ca/1d/0e/ca1d0eae82f6852973a199ad28e31c5b.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">PABLO LEAKZ DOC HISTOIRE EVALUATION MI-AVRIL</h5>
+    <p class="card-text">Leaked document</p>
+    <a href="https://docs.google.com/document/d/e/2PACX-1vTb7RASO4I9nIAJjnrhEoEawmLSbFQnAM54BTJDlqyD1n2M5NJlBng-BzFq_no54mEhKS4yaNtXsg4f/pub" class="btn btn-primary">Play Now</a>
+  </div>
+</div>
+
+
+  </article>
+  
+</section>
+	
+	<script data-cfasync="false" type="text/javascript">
+amzn_assoc_placement = "adunit0";
+amzn_assoc_tracking_id = "unblockedx1-20";
+amzn_assoc_ad_mode = "manual";
+amzn_assoc_ad_type = "smart";
+amzn_assoc_marketplace = "amazon";
+amzn_assoc_region = "US";
+amzn_assoc_linkid = "8c2a2aaaabbd4fc36b056b8283c2be31";
+amzn_assoc_asins = "B07PNFRCZS,B0751HT8C5,B07Q6B5YL5,B076CQG9QB,B07BFRR94X,B07Q69X7XL";
+amzn_assoc_design = "in_content";
+amzn_assoc_title = "Recommended Antiviruses";
+</script>
+<script data-cfasync="false" src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+
+<footer>
+  <p>© Pablo Leakz, 2022 - All rights reserved</p>
+</footer>
+
+</body>
+</html>
