--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -159,7 +159,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">PABLO LEAKZ DOC HISTOIRE EVALUATION MI-AVRIL</h5>
     <p class="card-text">Leaked document</p>
-    <a href="https://docs.google.com/document/d/e/2PACX-1vTb7RASO4I9nIAJjnrhEoEawmLSbFQnAM54BTJDlqyD1n2M5NJlBng-BzFq_no54mEhKS4yaNtXsg4f/pub" class="btn btn-primary">Acceder</a>
+    <a href="https://docs.google.com/document/d/e/2PACX-1vTb7RASO4I9nIAJjnrhEoEawmLSbFQnAM54BTJDlqyD1n2M5NJlBng-BzFq_no54mEhKS4yaNtXsg4f/pub" target="_blank" class="btn btn-primary">Acceder</a>
   </div>
 </div>
 
