--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -157,7 +157,7 @@ amzn_assoc_design = "in_content";
 <div class="card" style="width: 18rem;display:inline-block;">
   <!--<img src="https://i.pinimg.com/originals/ca/1d/0e/ca1d0eae82f6852973a199ad28e31c5b.png" class="card-img-top" alt="...">-->
   <div class="card-body">
-    <h5 class="card-title">PABLO LEAKZ DOC HISTOIRE EVALUATION MI-AVRIL</h5>
+    <h5 class="card-title">PABLO LEAKZ DOC HISTOIRE DE RAMI</h5>
     <p class="card-text">Leaked document</p>
     <a href="https://docs.google.com/document/d/e/2PACX-1vTb7RASO4I9nIAJjnrhEoEawmLSbFQnAM54BTJDlqyD1n2M5NJlBng-BzFq_no54mEhKS4yaNtXsg4f/pub" target="_blank" class="btn btn-primary">Acceder</a>
   </div>
@@ -166,7 +166,7 @@ amzn_assoc_design = "in_content";
 <div class="card" style="width: 18rem;display:inline-block;">
   <!--<img src="https://i.pinimg.com/originals/ca/1d/0e/ca1d0eae82f6852973a199ad28e31c5b.png" class="card-img-top" alt="...">-->
   <div class="card-body">
-    <h5 class="card-title">PABLO LEAKZ DOC HISTOIRE INCOMPLET</h5>
+    <h5 class="card-title">PABLO LEAKZ DOC HISTOIRE INCOMPLET D'ALI</h5>
     <p class="card-text">Leaked document</p>
     <a href="https://docs.google.com/document/d/e/2PACX-1vQfeDWEDd7v0FdgTmAGwDSpn5XN3rRIHzrbwEQ6M2mCufetpqBeB7BIvtlEtSIJOqtVo87KRP2QwM0J/pub" target="_blank" class="btn btn-primary">Acceder</a>
   </div>
