--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -114,7 +114,7 @@ footer {
 
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="./sites/chat.html">Chat</a>
+          <a class="nav-link" href="chat.html">Chat</a>
         </li>
       </ul>
 
