--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -108,7 +108,7 @@ footer {
       
 	        <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="./sites/contactus.html">Contact Us</a>
+          <a class="nav-link" href="contactus.html">Contact Us</a>
         </li>
       </ul>
 
