--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -133,7 +133,7 @@ footer {
 		
 
 	<a class="btn btn-primary" href="chat.html" role="Chat with users">Chat with users</a>
-	<a class="btn btn-primary" href="https://gofund.me/7824360e" role="Donate">Donate</a>
+	<a class="btn btn-primary" href="https://ko-fi.com/jerrytoaster556" role="Donate">Donate</a>
         <p>&nbsp;</p>
 				
  <script data-cfasync="false" type="text/javascript">
