--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -32,7 +32,7 @@ ga('send', 'pageview');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
 <title>Pablo Leakz</title>
-<link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
+<link rel="shortcut icon" type="image/png" href="https://images.emojiterra.com/google/android-10/512px/1f383.png"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -99,7 +99,7 @@ footer {
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
   <div class="container">
     <a class="navbar-brand" href="https://unblocked-x.com/sites/pabloleakz">
-      <img src="https://unblocked-x.com/Assets/image.png" class="rounded" height="80">
+      <p>Pablo Leakz ©</p>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
