--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -161,7 +161,7 @@ footer {
 <h1><span style="text-decoration: underline;">Chat with users live</span></h1>
 <p>&nbsp;</p>
 		
-		<iframe src="https://unblocked-x.com/sites/chat.html" title="Chat"></iframe>
+		<iframe src="https://unblocked-x.com/sites/chat.html" width="100%" height="500" title="Chat"></iframe>
 
 
   </article>
