--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -125,7 +125,7 @@ footer {
 <section class="rounded">
 	<article>
     <h1>Pablo Leakz</h1>
-	<p>Leaked school documents to help with studying.</p>
+	<p>i be leaking 😁😁😁😁😎😎😋😋😋😘😍😍🥰🥰👿</p>
 		
 
 		
