--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -30,7 +30,7 @@ ga('send', 'pageview');
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<title>Pablo Leakz</title>
+<title>Pablo Leakz © WOW REAL 😂😂😂😁😁😋😋😎😍😍😎😎</title>
 <link rel="shortcut icon" type="image/png" href="https://images.emojiterra.com/google/android-10/512px/1f383.png"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="utf-8">
@@ -98,7 +98,7 @@ footer {
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
   <div class="container">
     <a class="navbar-brand" href="https://unblocked-x.com/sites/pabloleakz">
-      <p>Pablo Leakz ©</p>
+      <img src="https://images.emojiterra.com/google/android-10/512px/1f383.png" alt="Icon" width="30" height="30">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -124,7 +124,7 @@ footer {
 
 <section class="rounded">
 	<article>
-       <img src="https://images.emojiterra.com/google/android-10/512px/1f383.png" alt="Icon" width="100" height="100">   <h1>Pablo Leakz</h1>
+          <h1>Pablo Leakz</h1>
 	<p>i be leaking 😁😁😁😁😎😎😋😋😋😘😍😍🥰🥰👿</p>
 		
 
