--- a/index.html
+++ b/index.html
@@ -137,10 +137,8 @@ footer {
 		
 		
 
-	<a class="btn btn-primary" href="services.html" role="Visit Unblocked-X">Visit Unblocked-X</a>
 	<a class="btn btn-primary" href="chat.html" role="Chat with users">Chat with users</a>
-	<a class="btn btn-primary" href="http://adfoc.us/69347881295650" role="Watch an ad">Watch an ad</a>
-	<a class="btn btn-primary" href="https://gofund.me/7824360e" role="Donate">Donate</a>
+	<a class="btn btn-primary" href="https://ko-fi.com/jerrytoaster556" role="Donate">Donate</a>
         <p>&nbsp;</p>
 				
  <script data-cfasync="false" type="text/javascript">
@@ -157,7 +155,7 @@ amzn_assoc_design = "in_content";
 </script>
 <script data-cfasync="false" src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 <p>&nbsp;</p>
-<h1><span style="text-decoration: underline;">Unblocked Games</span></h1>
+<h1><span style="text-decoration: underline;">Featured Games</span></h1>
 <p>&nbsp;</p>
 
 
@@ -209,6 +207,11 @@ amzn_assoc_design = "in_content";
     <a href="http://adfoc.us/69347880988940" class="btn btn-primary">Play Now</a>
   </div>
 </div>
+		
+		<p>&nbsp;</p>
+<h1><span style="text-decoration: underline;">More Games</span></h1>
+<p>&nbsp;</p>
+		
 
 <div class="card" style="width: 18rem;display:inline-block;">
   <img src="./Assets/pewpew.png" class="card-img-top" alt="...">
