--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Assessment-Examination</h5>
     <p class="card-text">Play Assessment-Examination Now</p>
-    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5392404/Web5/index.html" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5392404/Web5/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -175,7 +175,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Friday Night Funkin</h5>
     <p class="card-text">Play Friday Night Funkin Now</p>
-    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/2876359-359162/index.html" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/2876359-359162/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -185,7 +185,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">The Backrooms</h5>
     <p class="card-text">Play The Backrooms Now</p>
-    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5227008/Backrooms%20v1.6%20-%20WebGL/index.html" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5227008/Backrooms%20v1.6%20-%20WebGL/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -195,7 +195,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">GreyBox Testing</h5>
     <p class="card-text">Play GreyBox Testing Now</p>
-    <a href="http://adfoc.us/69347880924026" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880924026" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -204,7 +204,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">DeadBeat</h5>
     <p class="card-text">Play DeadBeat Now</p>
-    <a href="http://adfoc.us/69347880988940" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880988940" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 		
@@ -218,7 +218,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Pew Pew Shapes</h5>
     <p class="card-text">Play Pew Pew Shapes Now</p>
-    <a href="http://adfoc.us/69347880994327" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880994327" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -227,7 +227,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Leg Frogs</h5>
     <p class="card-text">Play Leg Frogs Now</p>
-    <a href="http://adfoc.us/69347880988772" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880988772" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -236,7 +236,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">VSCS-I</h5>
     <p class="card-text">Play VSCS-I Now</p>
-    <a href="http://adfoc.us/69347880986398" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880986398" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -245,7 +245,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Aku</h5>
     <p class="card-text">Play Aku Now</p>
-    <a href="http://adfoc.us/69347880924018" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880924018" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -254,7 +254,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Sleepless</h5>
     <p class="card-text">Play Sleepless Now</p>
-    <a href="http://adfoc.us/69347880924013" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880924013" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -263,7 +263,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Hellhunt GB</h5>
     <p class="card-text">Play Hellhunt GB Now</p>
-    <a href="http://adfoc.us/x81003789" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/x81003789" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 		
@@ -272,7 +272,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Synthetic</h5>
     <p class="card-text">Play Synthetic Now</p>
-    <a href="http://adfoc.us/69347880988871" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880988871" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 		
@@ -281,7 +281,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Blast City</h5>
     <p class="card-text">Play Blast City Now</p>
-    <a href="http://adfoc.us/69347880994337" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880994337" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -290,7 +290,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">4KRL</h5>
     <p class="card-text">Play 4KRL Now</p>
-    <a href="http://adfoc.us/69347880923698" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880923698" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -299,7 +299,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Survive The Disasters</h5>
     <p class="card-text">Play Survive The Disasters Now</p>
-    <a href="http://adfoc.us/69347880988819" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880988819" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -308,7 +308,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Stone House Orphanage</h5>
     <p class="card-text">Play Stone House Orphanage Now</p>
-    <a href="http://adfoc.us/69347880924065" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880924065" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -317,7 +317,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Bad Trip</h5>
     <p class="card-text">Play Bad Trip Now</p>
-    <a href="http://adfoc.us/69347880923703" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880923703" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -326,7 +326,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Slope</h5>
     <p class="card-text">Play Slope Now</p>
-    <a href="http://adfoc.us/69347880924048" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880924048" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -336,8 +336,8 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">One Way Ticket</h5>
     <p class="card-text">Play OWT Now</p>
-    <a href="http://adfoc.us/69347880923708" class="btn btn-primary">Play Chapter 1</a>
-    <a href="http://adfoc.us/69347880924002" class="btn btn-primary">Play Chapter 2</a>
+    <a href="http://adfoc.us/69347880923708" class="btn btn-primary" target="_blank">Play Chapter 1</a>
+    <a href="http://adfoc.us/69347880924002" class="btn btn-primary" target="_blank">Play Chapter 2</a>
   </div>
 </div>
 
@@ -346,7 +346,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Sneaky Stealy</h5>
     <p class="card-text">Play SS Now</p>
-    <a href="http://adfoc.us/69347880923697" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880923697" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -355,7 +355,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Revenge City</h5>
     <p class="card-text">Play RC Now</p>
-    <a href="http://adfoc.us/69347880988953" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880988953" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -364,7 +364,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Dark Spawned</h5>
     <p class="card-text">Play DS Now</p>
-    <a href="http://adfoc.us/69347881005439" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347881005439" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -374,7 +374,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Access Granted</h5>
     <p class="card-text">Play AG Now</p>
-    <a href="http://adfoc.us/69347880978890" class="btn btn-primary">Play Now</a>
+    <a href="http://adfoc.us/69347880978890" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -383,7 +383,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Sleepy Boi Can't Sleep</h5>
     <p class="card-text">Play SBCS Now</p>
-    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/4924354/_wvy__clr__sleepi_boi_can_t_sleep_final/index.html" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/4924354/_wvy__clr__sleepi_boi_can_t_sleep_final/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -392,7 +392,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">WordRL</h5>
     <p class="card-text">Play WordRL Now</p>
-    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5409129/webgl/index.html" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5409129/webgl/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -402,7 +402,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Gift Blox</h5>
     <p class="card-text">Play Gift Blox Now</p>
-    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5006173/index.html" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5006173/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -411,7 +411,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">To A Starling</h5>
     <p class="card-text">Play TAS Now</p>
-    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5043495/index.html" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5043495/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -420,7 +420,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Dordle</h5>
     <p class="card-text">Play Dordle Now</p>
-    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5440598/index.html" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5440598/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
@@ -429,7 +429,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">The Shepherd</h5>
     <p class="card-text">Play TS Now</p>
-    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5082713/Shepherd/index.html" class="btn btn-primary">Play Now</a>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5082713/Shepherd/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 
