--- a/Sites/place.html
+++ b/Sites/place.html
@@ -35,6 +35,7 @@ ga('send', 'pageview');
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    target="_PARENT"
 </head>
 <body>
 <iframe src="https://pixelplace.io/9148-r-place-remake" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
