--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -137,13 +137,21 @@ footer {
 <h1><span style="text-decoration: underline;">Leaked Documents</span></h1>
 <p>&nbsp;</p>
 
-
+<div class="card" style="width: 18rem;display:inline-block;">
+  <img src="https://cdn.discordapp.com/attachments/885200396539285584/968281646979751996/IMG_5708.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">FILLON LIFE ALBUM RELEASED</h5>
+    <p class="card-text">_FILLON_LIFE_</p>
+    <a href="fillonlife.html" target="_blank" class="btn btn-primary">View</a>
+  </div>
+</div>	
+		
 <div class="card" style="width: 18rem;display:inline-block;">
   <!--<img src="https://i.pinimg.com/originals/ca/1d/0e/ca1d0eae82f6852973a199ad28e31c5b.png" class="card-img-top" alt="...">-->
   <div class="card-body">
     <h5 class="card-title">PABLO LEAKZ DOC HISTOIRE DE RAMI</h5>
     <p class="card-text">Detailed document</p>
-    <a href="https://docs.google.com/document/d/e/2PACX-1vTb7RASO4I9nIAJjnrhEoEawmLSbFQnAM54BTJDlqyD1n2M5NJlBng-BzFq_no54mEhKS4yaNtXsg4f/pub" target="_blank" class="btn btn-primary">Acceder</a>
+    <a href="https://docs.google.com/document/d/e/2PACX-1vTb7RASO4I9nIAJjnrhEoEawmLSbFQnAM54BTJDlqyD1n2M5NJlBng-BzFq_no54mEhKS4yaNtXsg4f/pub" target="_blank" class="btn btn-primary">View</a>
   </div>
 </div>
 		
@@ -152,7 +160,7 @@ footer {
   <div class="card-body">
     <h5 class="card-title">PABLO LEAKZ DOC HISTOIRE INCOMPLET</h5>
     <p class="card-text">Incomplete document</p>
-    <a href="https://docs.google.com/document/d/e/2PACX-1vQfeDWEDd7v0FdgTmAGwDSpn5XN3rRIHzrbwEQ6M2mCufetpqBeB7BIvtlEtSIJOqtVo87KRP2QwM0J/pub" target="_blank" class="btn btn-primary">Acceder</a>
+    <a href="https://docs.google.com/document/d/e/2PACX-1vQfeDWEDd7v0FdgTmAGwDSpn5XN3rRIHzrbwEQ6M2mCufetpqBeB7BIvtlEtSIJOqtVo87KRP2QwM0J/pub" target="_blank" class="btn btn-primary">View</a>
   </div>
 </div>
 		
