--- a/Sites/fillonlife.html
+++ b/Sites/fillonlife.html
@@ -1,3 +1,1 @@
-<iframe src="https://www.youtube.com/watch?v=2AHuqwGZU9c" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-    Browser-Issue
-</iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/2AHuqwGZU9c?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
