--- a/Sites/pabloleakz.html
+++ b/Sites/pabloleakz.html
@@ -30,8 +30,7 @@ ga('send', 'pageview');
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<title>Pablo Leakz © WOW REAL 😂😂😂😁😁😋😋😎😍😍😎😎</title>
-<link rel="shortcut icon" type="image/png" href="https://images.emojiterra.com/google/android-10/512px/1f383.png"/>
+<title>deleted.</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -95,77 +94,6 @@ footer {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-  <div class="container">
-    <a class="navbar-brand" href="https://unblocked-x.com/sites/pabloleakz">
-      <img src="https://images.emojiterra.com/google/android-10/512px/1f383.png" alt="Icon" width="100" height="100">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      
-	        <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="contactus.html">Contact Us</a>
-        </li>
-      </ul>
-
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="chat.html">Chat</a>
-        </li>
-      </ul>
-
-    </div>
-  </div>
-</nav>
-<!-- Page Content -->
-
-<section class="rounded">
-	<article>
-          <h1>Pablo Leakz</h1>
-	<p>i be leaking 😁😁😁😁😎😎😋😋😋😘😍😍🥰🥰👿</p>
-		
-
-		
-		
-
-	<a class="btn btn-primary" href="chat.html" role="Chat with users">Chat with users</a>
-	<a class="btn btn-primary" href="https://ko-fi.com/jerrytoaster556" role="Donate">Donate</a>
-        <p>&nbsp;</p>
-<h1><span style="text-decoration: underline;">Leaked Documents</span></h1>
-<p>&nbsp;</p>
-		
-<div class="card" style="width: 18rem;display:inline-block;">
-  <!--<img src="https://i.pinimg.com/originals/ca/1d/0e/ca1d0eae82f6852973a199ad28e31c5b.png" class="card-img-top" alt="...">-->
-  <div class="card-body">
-    <h5 class="card-title">PABLO LEAKZ DOC HISTOIRE DE RAMI</h5>
-    <p class="card-text">Detailed document</p>
-    <a href="https://docs.google.com/document/d/e/2PACX-1vTb7RASO4I9nIAJjnrhEoEawmLSbFQnAM54BTJDlqyD1n2M5NJlBng-BzFq_no54mEhKS4yaNtXsg4f/pub" target="_blank" class="btn btn-primary">View</a>
-  </div>
-</div>
-		
-<div class="card" style="width: 18rem;display:inline-block;">
-  <!--<img src="https://i.pinimg.com/originals/ca/1d/0e/ca1d0eae82f6852973a199ad28e31c5b.png" class="card-img-top" alt="...">-->
-  <div class="card-body">
-    <h5 class="card-title">PABLO LEAKZ DOC HISTOIRE INCOMPLET</h5>
-    <p class="card-text">Incomplete document</p>
-    <a href="https://docs.google.com/document/d/e/2PACX-1vQfeDWEDd7v0FdgTmAGwDSpn5XN3rRIHzrbwEQ6M2mCufetpqBeB7BIvtlEtSIJOqtVo87KRP2QwM0J/pub" target="_blank" class="btn btn-primary">View</a>
-  </div>
-</div>
-		
-		
-		<p>&nbsp;</p>
-<h1><span style="text-decoration: underline;">Chat With Users</span></h1>
-<p>&nbsp;</p>
-		
-		<iframe src="https://unblocked-x.com/sites/chat.html" width="100%" height="500" title="Chat"></iframe>
-
-
-  </article>
-  
-</section>
-
+	<p>website deleted.</p>
 </body>
 </html>
