--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -115,6 +115,14 @@ ga('send', 'pageview');
     }
     .message-form__button {
       margin: 10px 0 10px 10px;
+    background-color: #FFFFFF;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
     }
   </style>
 </head>
