--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ ga('send', 'pageview');
   
   
   <style>
-    body, h1, h2, h3, h4, h5, h6 {
+    body, h1, h2, h3, h4, h5, h6, a {
   font-family: Arial, Helvetica, sans-serif;
 }
     body {background-color: black;}
@@ -67,5 +67,7 @@ ga('send', 'pageview');
 
 <body>
   <h2>Website is currently updating..</h2>
+  <a href="original.html">View old version</a>
+  <p>&nbsp;</p>
   <div class="loader"></div>
 </body>
