--- a/original.html
+++ b/original.html
@@ -43,6 +43,13 @@ ga('send', 'pageview');
 
 <nav class="navbar navbar-default"> </nav>
 	
+body, h1, h2, h3, h4, h5, h6, a{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, a, p{
+  color:white;
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -50,10 +57,9 @@ body {
 
 	
 header3 {
-  background-color: #33393E;
+  background-color: #000;
   color: white;
 }
-
 
 	
 
@@ -67,7 +73,7 @@ article {
   float: left;
   padding: 20px;
   width: 100%;
-  background-color: #f1f1f1;
+  background-color: #151414;
   /* height: 900px;  only for demonstration, should be removed */
 }
 
@@ -80,7 +86,7 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: #777;
+  background-color: #000;
   padding: 10px;
   text-align: center;
   color: white;
@@ -96,7 +102,7 @@ footer {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-black static-top">
   <div class="container">
     <a class="navbar-brand" href="../index.html">
       <img src="./Assets/image.png" class="rounded" height="80">
@@ -159,7 +165,7 @@ amzn_assoc_design = "in_content";
 <p>&nbsp;</p>
 
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/ass.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Assessment-Examination</h5>
@@ -170,7 +176,7 @@ amzn_assoc_design = "in_content";
 
 
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTql8-0GArnc0zm0FNo-20HpbNjQH8q9atDXflCT9MNy_kr2lVTNToWG7_xgrS09e-KjHo&usqp=CAU" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Friday Night Funkin</h5>
@@ -180,7 +186,7 @@ amzn_assoc_design = "in_content";
 </div>
 
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://preview.redd.it/vx0rmc6xuz231.png?auto=webp&s=1ee7e2e52c14d29c48cfcd03dccdb337717e5a58" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">The Backrooms</h5>
@@ -190,7 +196,7 @@ amzn_assoc_design = "in_content";
 </div>
 
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://archive.org/download/grey-box-testingv-0-1-4/Logo.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">GreyBox Testing</h5>
@@ -199,7 +205,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/deadbeat.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">DeadBeat</h5>
@@ -213,7 +219,7 @@ amzn_assoc_design = "in_content";
 <p>&nbsp;</p>
 		
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/pewpew.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Pew Pew Shapes</h5>
@@ -222,7 +228,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/legfrogs.PNG" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Leg Frogs</h5>
@@ -231,7 +237,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/vscs-i.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">VSCS-I</h5>
@@ -240,7 +246,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/aku.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Aku</h5>
@@ -249,7 +255,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/sleepless.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Sleepless</h5>
@@ -258,7 +264,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/hellhunt.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Hellhunt GB</h5>
@@ -267,7 +273,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 		
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/synthetic.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Synthetic</h5>
@@ -276,7 +282,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 		
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/blastcity.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Blast City</h5>
@@ -285,7 +291,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/4krl.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">4KRL</h5>
@@ -294,7 +300,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/stc.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Survive The Disasters</h5>
@@ -303,7 +309,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/sho.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Stone House Orphanage</h5>
@@ -311,8 +317,8 @@ amzn_assoc_design = "in_content";
     <a href="http://adfoc.us/69347880924065" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
-
-<div class="card" style="width: 18rem;display:inline-block;">
+ 
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/bad_trip.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Bad Trip</h5>
@@ -321,7 +327,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/slope.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Slope</h5>
@@ -331,7 +337,7 @@ amzn_assoc_design = "in_content";
 </div>
 
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/grub.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">One Way Ticket</h5>
@@ -341,7 +347,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/sneak.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Sneaky Stealy</h5>
@@ -350,7 +356,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/revenge.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Revenge City</h5>
@@ -359,7 +365,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/dark.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Dark Spawned</h5>
@@ -369,7 +375,7 @@ amzn_assoc_design = "in_content";
 </div>
 
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/acc.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Access Granted</h5>
@@ -378,7 +384,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/sleep.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Sleepy Boi Can't Sleep</h5>
@@ -387,7 +393,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/wordl.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">WordRL</h5>
@@ -397,7 +403,7 @@ amzn_assoc_design = "in_content";
 </div>
 
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/gift.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Gift Blox</h5>
@@ -406,7 +412,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/starling.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">To A Starling</h5>
@@ -415,7 +421,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/dord.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Dordle</h5>
@@ -424,7 +430,7 @@ amzn_assoc_design = "in_content";
   </div>
 </div>
 
-<div class="card" style="width: 18rem;display:inline-block;">
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/sh.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">The Shepherd</h5>
