--- a/original.html
+++ b/original.html
@@ -102,35 +102,31 @@ footer {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-black static-top">
-  <div class="container">
-    <a class="navbar-brand" href="../index.html">
-      <img src="./Assets/image.png" class="rounded" height="80">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	<nav class="navbar navbar-expand-lg navbar-light bg-black">
+    <a class="navbar-brand" style="color:white">Unblocked</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="./sites/services.html">Services</a>
+  
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" style="color:white" href="https://unblocked-x.com">Home</span></a>
         </li>
-      </ul>
-	        <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="./sites/contactus.html">Contact Us</a>
+          <a class="nav-link" style="color:white" href="./sites/contactus.html">Contact Us</a>
         </li>
-      </ul>
 
-      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="./sites/chat.html">Chat</a>
+          <a class="nav-link" style="color:white" href="./sites/Services.html">Services</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" style="color:white" href="./sites/chat.html">Chat</a>
         </li>
       </ul>
-
     </div>
-  </div>
-</nav>
+  </nav>
 <!-- Page Content -->
 
 <section class="rounded">
