--- a/original.html
+++ b/original.html
@@ -164,7 +164,7 @@ amzn_assoc_design = "in_content";
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/ass.png" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Assessment-Examination</h5>
+    <h5 class="card-title">Assessment-Examination <span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play Assessment-Examination Now</p>
     <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5392404/Web5/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
@@ -175,7 +175,7 @@ amzn_assoc_design = "in_content";
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTql8-0GArnc0zm0FNo-20HpbNjQH8q9atDXflCT9MNy_kr2lVTNToWG7_xgrS09e-KjHo&usqp=CAU" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Friday Night Funkin</h5>
+    <h5 class="card-title">Friday Night Funkin <span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play Friday Night Funkin Now</p>
     <a href="https://v6p9d9t4.ssl.hwcdn.net/html/2876359-359162/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
@@ -185,7 +185,7 @@ amzn_assoc_design = "in_content";
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://preview.redd.it/vx0rmc6xuz231.png?auto=webp&s=1ee7e2e52c14d29c48cfcd03dccdb337717e5a58" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">The Backrooms</h5>
+    <h5 class="card-title">The Backrooms <span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play The Backrooms Now</p>
     <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5227008/Backrooms%20v1.6%20-%20WebGL/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
@@ -195,7 +195,7 @@ amzn_assoc_design = "in_content";
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://archive.org/download/grey-box-testingv-0-1-4/Logo.png" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">GreyBox Testing</h5>
+    <h5 class="card-title">GreyBox Testing <span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play GreyBox Testing Now</p>
     <a href="http://adfoc.us/69347880924026" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
@@ -204,7 +204,7 @@ amzn_assoc_design = "in_content";
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/deadbeat.png" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">DeadBeat</h5>
+    <h5 class="card-title">DeadBeat <span class="badge bg-secondary">New</span> </h5> 
     <p class="card-text">Play DeadBeat Now</p>
     <a href="http://adfoc.us/69347880988940" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
