--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -3,7 +3,7 @@
 <head>
 
 <title>Anonymous Chat</title>
-<link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
+<link rel="shortcut icon" type="image/png" href="istockphoto-1256111682-612x612-removebg-preview.png"/>
   
   <!-- Hotjar Tracking Code for https://unblocked-x.com -->
 <script>
