--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  
 <title>Anonymous Chat</title>
 <link rel="shortcut icon" type="image/png" href="istockphoto-1256111682-612x612-removebg-preview.png"/>
+  
   
   <!-- Hotjar Tracking Code for https://unblocked-x.com -->
 <script>
@@ -131,6 +133,28 @@ ga('send', 'pageview');
   </style>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-black">
+    <a class="navbar-brand" style="color:white">Unblocked</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" style="color:white" href="https://unblocked-x.com">Home</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" style="color:white" href="contactus.html">Contact Us</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" style="color:white" href="Services.html">Services</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  
   <div class="left">
     <div class="label">Public rooms</div>
     <div class="rooms">
