--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -133,27 +133,6 @@ ga('send', 'pageview');
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-black">
-    <a class="navbar-brand" style="color:white">Unblocked</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" style="color:white" href="https://unblocked-x.com">Home</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" style="color:white" href="contactus.html">Contact Us</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" style="color:white" href="Services.html">Services</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
   
   <div class="left">
     <div class="label">Public rooms</div>
@@ -169,7 +148,8 @@ ga('send', 'pageview');
     <div class="messages"></div>
     <form class="message-form" onsubmit="return false;" style="background-color:#151414">
       <input class="message-form__input" placeholder="Type a message.." type="text" style="background-color:black; color:white;"/>
-      <input class="message-form__button" value="Send" type="submit" style="background-color:black; color:white;"/>
+      <!--<input class="message-form__button" value="Send" type="submit" style="background-color:black; color:white;"/> -->
+      <a class="message-form__button" value="Send" type="submit" style="background-color:black; color:white;">Send</a>
     </form>
   </div>
   <script src="./script.js"></script>
