--- a/original.html
+++ b/original.html
@@ -53,6 +53,7 @@ h1, h2, h3, h4, h5, h6, a, p{
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 	
@@ -74,6 +75,7 @@ article {
   padding: 20px;
   width: 100%;
   background-color: #151414;
+  background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/double-bubble-dark.png');
   /* height: 900px;  only for demonstration, should be removed */
 }
 
