--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ article {
   padding: 20px;
   width: 100%;
   background-color: #151414;
+background-image: url('double-bubble-dark.png');
   /* height: 900px;  only for demonstration, should be removed */
 }
 
