--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -57,6 +57,7 @@ ga('send', 'pageview');
       flex-direction: column;
       background: black;
       padding: 10px;
+      background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/double-bubble-dark.png');
     }
 
     .right {
@@ -85,6 +86,7 @@ ga('send', 'pageview');
       flex-grow: 1;
       overflow: auto;
     background-color:#151414;
+      background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/double-bubble-dark.png');
     }
 
     .message {
