--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -86,6 +86,7 @@ ga('send', 'pageview');
       flex-grow: 1;
       overflow: auto;
     background-color:#151414;
+      overflow-y: hidden;
     }
 
     .message {
