--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -147,7 +147,7 @@ ga('send', 'pageview');
   </div>
   <div class="right">
     <div class="chat-title" style="color:white; background-color:black;">Global public room</div>
-    <div class="messages">Refrain from spamming or the site will be shut down.</div>
+    <div class="messages" style="color:white">Refrain from spamming or the site will be shut down.</div>
     <form class="message-form" onsubmit="return false;" style="background-color:#151414">
       <input class="message-form__input" placeholder="Type a message.." type="text" style="background-color:black; color:white;"/>
       <input class="message-form__button" value="Send" type="submit" style="background-color:black; color:white;"/>
